# compest

./: .gitignore  README.md  model.example.ipynb  pyproject.toml  shell.nix
.github/workflows/: ci.yml
compest/: __init__.py  company.py  currency.py  equity.py  job.py  models.py  renderer.py
compest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: company_tests.py  conftest.py  currency_tests.py  equity_tests.py  job_tests.py  models_tests.py
